Finished documentation. Everything works except for project updating. It requires a little bit of tinkering inside the controller.
